--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,8 @@
                 <div class="price">R150/-</div>
             </div>
         </div> -->
-        <div id="cart-total" class="cart-total">Total: R0.00</div> <!-- Add this line -->
+        <div id="cart-total"></div>
+ <!-- Add this line -->
         <div>
          
           <div id="paymentFormContainer">
@@ -109,55 +110,9 @@
 <section class="products" id="products">
 <h1 class="heading">Choose what <span>you like</span></h1>
 <div class="box-container">
-    <div class="box">
-        <img src="../images/product.jpg" alt="">
-        <h3>Stylish cap</h3>
-        <div class="price"> R200<span>R170</span></div>
-        <a href="#" class="btn-cart">add to cart</a>
-    </div>
-    <div class="box">
-        <img src="../images/product.jpg" alt="">
-        <h3>Stylish cap</h3>
-        <div class="price"> R200</div>
-        <a href="#" class="btn-cart">add to cart</a>
-    </div>
-    <div class="box">
-        <img src="../images/product.jpg" alt="">
-        <h3>Stylish cap</h3>
-        <div class="price"> R200</div>
-        <a href="#" class="btn-cart">add to cart</a>
-    </div>
-    <div class="box">
-        <img src="../images/product.jpg" alt="">
-        <h3>Stylish cap</h3>
-        <div class="price"> R200</div>
-        <a href="#" class="btn-cart">add to cart</a>
-    </div>
-    <div class="box">
-        <img src="../images/product.jpg" alt="">
-        <h3>Stylish cap</h3>
-        <div class="price"> R200</div>
-        <a href="#" class="btn-cart">add to cart</a>
-    </div>
-    <div class="box">
-        <img src="../images/product.jpg" alt="">
-        <h3>Stylish cap</h3>
-        <div class="price"> R200</div>
-        <a href="#" class="btn-cart"">add to cart</a>
-    </div>
-    <div class="box">
-        <img src="../images/product.jpg" alt="">
-        <h3>Stylish cap</h3>
-        <div class="price"> R200</div>
-        <a href="#" class="btn-cart">add to cart</a>
-    </div>
-    <div class="box">
-        <img src="../images/product.jpg" alt="">
-        <h3>Stylish cap</h3>
-        <div class="price"> R200</div>
-        <a href="#" class="btn-cart">add to cart</a>
-    </div>
+  <!-- The boxes will be appended here by the script -->
 </div>
+
 </section>
 <!-- custom js file link-->
 <script src="../js/script.js"></script>
