--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,7 @@
           <div id="paymentFormContainer">
             <a href="#" class="btn-checkout">Checkout</a>
           </div>
+          <button id="checkoutButton" onclick="checkout()">Checkout</button>
 
     
   </div>
