--- a/public/index.html
+++ b/public/index.html
@@ -73,4 +73,52 @@
           </div>
           <button id="checkoutButton" onclick="checkout()">Checkout</button>
 
+    
+  </div>
+    </div>
+</header>
+<!--header section ends-->
+<!--home section starts here-->
+<section class="home" id="home">
+    <div class="content">
+        <h3> Fresh looking caps </h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut tempora veniam omnis blanditiis rem in
+            architecto! </p>
+        <a href="#" class="btn">Shop Now</a>
+    </div>
+</section>
+<!--home section ends here-->
+<!--about sectiom starts here-->
+<section class="about" id="about">
+    <h1 class="heading"> <span>about</span> us</h1>
+    <div class="row">
+        <div class="image">
+            <img src="images/about.jpg" alt="">
+        </div>
+        <div class="content">
+            <h3>Why Our Caps?</h3>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint facilis pariatur at ipsa eum iusto
+                nemo voluptates maxime aut earum voluptatum consequuntur est repudiandae a reiciendis,
+                necessitatibus similique libero aliquam.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt harum, libero molestiae vitae
+                itaque, nostrum eligendi officiis soluta tempora, aspernatur modi nemo rem dolorem impedit aliquam
+                nulla. Laboriosam, nemo optio?</p>
+                <a href="#" class="btn">Learn More</a>
+        </div>
+    </div>
+</section>
+<!--about sectiom ends here-->
+<section class="products" id="products">
+<h1 class="heading">Choose what <span>you like</span></h1>
+<div class="box-container">
+  <!-- The boxes will be appended here by the script -->
+</div>
+
+</section>
+<!-- custom js file link-->
+<script src="../js/script.js"></script>
+</body>
+</html>
+
+
 
